Fixes crontab functionality